; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_test_loadext.c_testbrokenext_init.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_test_loadext.c_testbrokenext_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"broken!\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @testbrokenext_init(i32* %0, i8** %1, i32* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8**, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i8*, align 8
  store i32* %0, i32** %4, align 8
  store i8** %1, i8*** %5, align 8
  store i32* %2, i32** %6, align 8
  %8 = load i32*, i32** %6, align 8
  %9 = call i32 @SQLITE_EXTENSION_INIT2(i32* %8)
  %10 = call i8* @sqlite3_mprintf(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  store i8* %10, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = load i8**, i8*** %5, align 8
  store i8* %11, i8** %12, align 8
  ret i32 1
}

declare dso_local i32 @SQLITE_EXTENSION_INIT2(i32*) #1

declare dso_local i8* @sqlite3_mprintf(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
